# research

./: .gitkeep  RUN_INSTRUCTIONS.md  poc_impl_plan.md
experiments/license-repo/: CLAUDE.md  Cargo.toml
experiments/license-repo/src/: main.rs  prelude.rs  state.rs
experiments/license-repo/src/plugins/server/: handlers.rs  mod.rs
research_project/: FINAL_REPORT.md  MINI_WORKER_REPORT.md  plan.md  search.py
research_project/notes/: topic_10_security.md  topic_11_rpc_analysis.md  topic_11_steam_login.md  topic_12_rust_vm_management.md  topic_12_steam_login.md  topic_13_vm_xml_management.md  topic_13_zswap_config.md  topic_14_cs2_sharing.md  topic_14_implementation_order.md  topic_15_dev_strategy.md  topic_16_steam_auth_deep_dive.md  topic_17_qemu_guest_agent.md  topic_18_mini_worker_analysis.md  topic_19_steam_session_injection.md  topic_1_os_choice.md  topic_2_kvm_setup.md  topic_3_hardware_spoofing.md  topic_4_memory_optimization.md  topic_5_cs2_lowres.md  topic_6_input_display.md  topic_7_worker_arch.md  topic_8_parallel_vms.md  topic_9_server_worker_comm.md
research_project/raw_data/: 9p_virtio.md  async_steampy.md  crate_steam_auth.md  crate_steam_totp.md  crate_steamguard_cli.md  doctormckay_steam_session.md  libvirt_crates.md  libvirt_domain_xml.md  libvirt_rust.md  node_steam_session.md  node_steam_totp.md  qemu_crates.md  quick_xml.md  steam_arch.md  steam_auth.md  steam_cli_options.md  steam_desktop_auth.md  steam_login_research.md  steam_python_lib.md  steam_session_manager.md  steam_switcher.md  steam_totp.md  steam_troubleshooting.md  steamcmd.md  steamguard_wiki.md  steamhelper_rs.md  venus_docs.md  virt_crate.md  virt_docs.md  virtiofs.md  virtiofs_official.md  zram_arch.md  zswap_arch.md  zswap_kernel.md
rpc/: Cargo.toml
rpc/crates/shai/: Cargo.toml
rpc/crates/shai-macros/: Cargo.toml
rpc/crates/shai-macros/src/: lib.rs
rpc/crates/shai/benches/: frame_encode.rs  router.rs
rpc/crates/shai/examples/: quic-load.rs
rpc/crates/shai/src/: archive.rs  lib.rs  local.rs
rpc/crates/shai/src/router/: context.rs  extract.rs  mod.rs
rpc/crates/shai/src/rpc/: frame.rs  mod.rs
rpc/crates/shai/src/transport/: codec.rs  mod.rs  peer.rs
rpc/crates/shai/src/transport/quic/: mod.rs  peer.rs
rpc/crates/shai/src/util/: extensions.rs  mod.rs
rpc/crates/shai/tests/: ext.rs  local.rs  macro.rs  quic.rs  router.rs
worker/: Cargo.toml
worker/src/: config.rs  deps.rs  disk.rs  guest_agent.rs  image.rs  main.rs  session.rs  spoof.rs  update.rs  verify.rs  vm.rs
worker/src/container/: session.rs  steam_auth.rs
