[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
rkyv = { version = "0.8", features = ["little_endian"] }
bytes = { version = "1.7", features = [] }
tower = { version = "0.5" }
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

quinn = { version = "0.11" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = { version = "0.13" }

tracing = { version = "0.1" }
futures = { version = "0.3" }
thiserror = { version = "2.0" }

# utils 
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
